save the changes to heroku

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SECRET_KEY = 'pkraxe3ng$9^i34^&wg&zkedy6b%*uo5x$@dr!jf=_=ubwr24h'
-DEBUG=False
+SECRET_KEY='2019'
+DEBUG=True
 DB_NAME='awards'
 DB_USER='moringaschoolcom'
 DB_PASSWORD='mids'
