--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==1.11
 django-bootstrap4==0.0.7
+django-crispy-forms==1.7.2
+django-decouple==2.1
 django-heroku==0.3.1
 django-registration==2.4.1
 django-tinymce==2.7.0
@@ -11,6 +13,7 @@ formatizer==0.1.1
 future==0.16.0
 Pillow==5.3.0
 psycopg2==2.7.5
+python-decouple==3.1
 pytz==2018.5
 six==1.11.0
 whitenoise==4.1
