--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-tinymce==2.7.0
 djangorestframework==3.8.2
 formatizer==0.1.1
 future==0.16.0
+gunicorn==19.9.0
 Pillow==5.3.0
 psycopg2==2.7.5
 python-decouple==3.1
